--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "socket.io": "2.0.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "5.0.1",
+    "@commitlint/config-angular": "5.0.1",
     "@types/clipboard": "1.5.35",
     "@types/express": "4.0.39",
     "@types/jasmine": "2.8.2",
@@ -67,7 +69,7 @@
     "tslib": "1.8.0",
     "tslint": "5.8.0",
     "typescript": "2.6.1",
-    "uglify-js": "2",
+    "uglify-js": "^2.8",
     "vue": "2.5.6",
     "vue-class-component": "6.1.0",
     "watch-then-execute": "1.1.1",
